@@ -1,7 +1,7 @@
 /* tests data packing and unpacking */
 
 struct msg {
-	string from_name = 1;
+	string /* sender */ from_name = 1; /* be verbose */
 	string to_name = 2;
 	optional struct[kill] attack = 3;
 	array struct[run] run = 4;
